--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>=8), python-docutils
 
 Package: git-hub
 Architecture: all
-Depends: ${python:Depends}, ${misc:Depends}, python (>=2.7), git (>=1.7.7)
+Depends: ${python:Depends}, ${misc:Depends}, python2.7, git (>=1.7.7)
 Description: Git command line interface to GitHub
  git-hub is a simple command line interface to github, enabling most useful
  GitHub tasks (like creating and listing pull request or issues) to be accessed
