--- a/debian/rules
+++ b/debian/rules
@@ -5,4 +5,5 @@
 
 override_dh_auto_install:
 	$(MAKE) DESTDIR=$$(pwd)/debian/git-hub prefix=/usr install
+	sed -i '1 s/ python$$/ python2.7/' $$(pwd)/debian/git-hub/usr/bin/git-hub
 
