--- a/deb/build
+++ b/deb/build
@@ -31,7 +31,7 @@ fpm -s dir -t deb -n "$pkgname" -v "$pkgversion" \
 	--architecture all \
 	--maintainer "$pkgmaint" \
 	--description "Git command line interface to GitHub" \
-	--url 'https://github.com/sociomantic/git-hub' \
+	--url 'https://github.com/sociomantic-tsunami/git-hub' \
 	--vendor 'Sociomantic Labs GmbH' \
 	--license GPLv3 \
 	--category vcs \
