Add Ubuntu bionic support
We need to update the cachalot version because old images are not built
for bionic.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ env:
         - PATH="$(git config -f .gitmodules submodule.beaver.path)/bin:$PATH"
     matrix:
         - DIST=xenial
+        - DIST=bionic
 
 install: beaver install
 
