--- a/deb/build
+++ b/deb/build
@@ -32,7 +32,7 @@ fpm -s dir -t deb -n "$pkgname" -v "$pkgversion" \
 	--maintainer "$pkgmaint" \
 	--description "Git command line interface to GitHub" \
 	--url 'https://github.com/sociomantic-tsunami/git-hub' \
-	--vendor 'Sociomantic Labs GmbH' \
+	--vendor 'dunnhumby Germany GmbH' \
 	--license GPLv3 \
 	--category vcs \
 	--depends python2.7 \
