--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ env:
 
 install: beaver install
 
-script: beaver make PYTHON=python all deb
+script: beaver make PYTHON=python3 all deb
 
 deploy:
     provider: script
